Fixing the validation messages so they no longer cause fields to jump around

--- a/forgerock-ui/branches/dev/forgerock-ui-user/src/main/resources/css/user/forms.less
+++ b/forgerock-ui/branches/dev/forgerock-ui-user/src/main/resources/css/user/forms.less
@@ -166,6 +166,8 @@ form.form {
     div.validation-message, div.input-validation-message {
         color: @color-active;
         display: inline-block;
+        float: right;
+        width: 220px;
     }
     div.group-field-inputs {
         float: left;
